// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Warning.vue snapshots > should match snapshot for dark theme 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table dark-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-3 wind symbol-list-image-column symbol-list-image warning-image" aria-label="Vaarallinen tuulivaroitus maa‑alueille"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text">Tuulivaroitus maa‑alueille</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-wind" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Tuulivaroitus maa‑alueille"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue snapshots > should match snapshot for default state 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-3 wind symbol-list-image-column symbol-list-image warning-image" aria-label="Vaarallinen tuulivaroitus maa‑alueille"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text">Tuulivaroitus maa‑alueille</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-wind" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Tuulivaroitus maa‑alueille"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue snapshots > should match snapshot for different languages > language-en 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-3 wind symbol-list-image-column symbol-list-image warning-image" aria-label="Dangerous wind warning for land areas"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text">Wind warning for land areas</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-wind" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Wind warning for land areas"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue snapshots > should match snapshot for different languages > language-fi 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-3 wind symbol-list-image-column symbol-list-image warning-image" aria-label="Vaarallinen tuulivaroitus maa‑alueille"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text">Tuulivaroitus maa‑alueille</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-wind" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Tuulivaroitus maa‑alueille"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue snapshots > should match snapshot for different languages > language-sv 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-3 wind symbol-list-image-column symbol-list-image warning-image" aria-label="Farlig vindvarning för landområden"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text">Vindvarning för landområden</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-wind" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Vindvarning för landområden"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue snapshots > should match snapshot for different severity levels > severity-1 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-0 wind symbol-list-image-column symbol-list-image warning-image" aria-label=" tuulivaroitus maa‑alueille"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text">Tuulivaroitus maa‑alueille</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-wind" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Tuulivaroitus maa‑alueille"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue snapshots > should match snapshot for different severity levels > severity-2 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-2 wind symbol-list-image-column symbol-list-image warning-image" aria-label="Mahdollisesti vaarallinen tuulivaroitus maa‑alueille"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text">Tuulivaroitus maa‑alueille</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-wind" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Tuulivaroitus maa‑alueille"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue snapshots > should match snapshot for different severity levels > severity-3 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-3 wind symbol-list-image-column symbol-list-image warning-image" aria-label="Vaarallinen tuulivaroitus maa‑alueille"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text">Tuulivaroitus maa‑alueille</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-wind" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Tuulivaroitus maa‑alueille"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue snapshots > should match snapshot for different severity levels > severity-4 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-4 wind symbol-list-image-column symbol-list-image warning-image" aria-label="Hyvin vaarallinen tuulivaroitus maa‑alueille"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text">Tuulivaroitus maa‑alueille</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-wind" class="symbol-list-select flag-selected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Tuulivaroitus maa‑alueille"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue snapshots > should match snapshot for hidden warning 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-3 wind symbol-list-image-column symbol-list-image warning-image" aria-label="Vaarallinen tuulivaroitus maa‑alueille"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text">Tuulivaroitus maa‑alueille</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-wind" class="symbol-list-select flag-unselected d-md-block focus-ring d-none" role="button" tabindex="0" aria-pressed="false" aria-label="Tuulivaroitus maa‑alueille"><span data-v-bd8e0e21="">Off</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;

exports[`Warning.vue snapshots > should match snapshot when not hideable 1`] = `
"<div data-v-bd8e0e21="" class="symbol-list-table light-theme">
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-image">
    <div data-v-bd8e0e21="" class="level-3 wind symbol-list-image-column symbol-list-image warning-image" aria-label="Vaarallinen tuulivaroitus maa‑alueille"></div>
  </div>
  <div data-v-bd8e0e21="" class="symbol-list-cell symbol-list-cell-text">
    <div data-v-bd8e0e21="" class="symbol-list-text-select">
      <!-- eslint-disable-next-line vue/no-v-html -->
      <div data-v-bd8e0e21="" class="item-text symbol-list-text">Tuulivaroitus maa‑alueille</div>
      <div data-v-bd8e0e21="" class="symbol-list-select-container d-none d-md-table-cell">
        <div data-v-bd8e0e21="" id="fmi-warnings-flag-wind" class="symbol-list-select flag-selected focus-ring d-none" role="button" tabindex="0" aria-pressed="true" aria-label="Tuulivaroitus maa‑alueille"><span data-v-bd8e0e21="">On</span></div>
      </div>
    </div>
    <hr data-v-bd8e0e21="">
  </div>
</div>"
`;
